--- a/content/about.html
+++ b/content/about.html
@@ -1,23 +1,17 @@
 <!-- title: About -->
 <h1>About</h1>
-<p>
-Quisque quam nisl, egestas nec convallis vitae, fringilla nec mauris.
-Sed et cursus lacus, a pharetra ex. Pellentesque rhoncus malesuada elit
-at sodales. In ut elit lectus. Phasellus et hendrerit odio, ac hendrerit
-ante. Pellentesque habitant morbi tristique senectus et netus et
-malesuada fames ac turpis egestas. Quisque sem nibh, auctor vel dictum
-eu, pharetra sit amet nunc. Integer suscipit suscipit dapibus.
-Suspendisse vulputate sed mauris eget tempus. Etiam rhoncus, leo nec
-cursus elementum, massa lorem fermentum nisi, non convallis nisl dolor
-vel ipsum.
-</p>
-<p>
-Aliquam imperdiet vel purus sed facilisis. Mauris condimentum vel nulla
-ac tempor. In non venenatis arcu. Nam in sapien purus. Suspendisse
-faucibus, erat et fringilla vestibulum, ligula nisi porta odio, ut
-tristique dui ante eu nisi. Mauris vitae vulputate lorem. Proin tortor
-nisl, vehicula sed justo sed, volutpat bibendum purus. Phasellus luctus
-fringilla augue ac sodales. Aenean ac nisi sit amet neque pulvinar
-tincidunt ut nec ipsum. Aliquam purus tellus, dignissim a augue
-placerat, aliquet semper turpis. Fusce id lacinia quam, vel porta quam.
-</p>
+<p>I'm Daven and this page attempts to reduce my life down to a single page of text. Here goes... </p>
+<p>I was a teacher in Japan for 8 years, but ultimately changed my career to a software engineer. <a href="/blog/from-teacher-to-swe/" class="">Here's how I did it.</a></p>
+<p>I spent my childhood doing what amounts to the following three things:</p>
+
+<ul>
+    <li>playing with computers</li>
+    <li>playing Dance Dance Revolution</li>
+    <li>playing video games</li>
+
+</ul>
+
+<p>In elementary school, I was building computers for friends and family. By high school I was using OllyDb to create my own rules within the games I enjoyed.</p>
+
+<p>I graduated from the University of Waterloo, where I got my butt kicked by the course curriculum. By sheer luck, I got an offer to come to Japan for the JET programme and left everything I knew to come. Little did I know, I would still be here 10 years later.</p>
+
