improve formatting and colors

--- a/content/about.html
+++ b/content/about.html
@@ -1,17 +1,8 @@
 <!-- title: About -->
 <h1>About</h1>
-<p>I'm Daven and this page attempts to reduce my life down to a single page of text. Here goes... </p>
-<p>I was a teacher in Japan for 8 years, but ultimately changed my career to a software engineer. <a href="/blog/from-teacher-to-swe/" class="">Here's how I did it.</a></p>
-<p>I spent my childhood doing what amounts to the following three things:</p>
-
-<ul>
-    <li>playing with computers</li>
-    <li>playing Dance Dance Revolution</li>
-    <li>playing video games</li>
-
-</ul>
-
-<p>In elementary school, I was building computers for friends and family. By high school I was using OllyDb to create my own rules within the games I enjoyed.</p>
-
-<p>I graduated from the University of Waterloo, where I got my butt kicked by the course curriculum. By sheer luck, I got an offer to come to Japan for the JET programme and left everything I knew to come. Little did I know, I would still be here 10 years later.</p>
-
+<p>I'm Daven, a Canadian teacher turned software engineer.</p>
+<p>This is my personal blog where I write about my thoughts on topics mostly related to learning, tech and software
+    engineering.</p>
+<div class="profile-container">
+    <img class="profile-shadow" src="https://i.pravatar.cc/75" />
+</div>
